@@ -130,6 +130,8 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapo-translucent entry leak (ITS#6746)
 	Fixed contrib/autogroup install location (ITS#6684)
 	Fixed contrib/autogroup crash with ppolicy (ITS#6684)
+	Fixed contrib/autogroup with non-DN URIs (ITS#6684)
+	Fixed contrib/autogroup with memberOf overlay (ITS#6684)
 	Fixed contrib/cloak when returning multiple entries (ITS#6762)
 	Fixed contrib/nssov to only close socket on shutdown (ITS#6676)
 	Fixed contrib/nssov multi platform support (ITS#6604)
